# Stuff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
Courses/: CMakeLists.txt
Courses/Algorithms1Coursera/: CMakeLists.txt  README.md
Courses/Algorithms1Coursera/Week1/: 01QuickFindUF.cpp  02QuickUnionLazy.cpp  03QuickUnionLazy.cpp  README.md
Courses/Algorithms1Coursera/Week2/slides/: 009RandomizedQueue.cpp  01LinkedStackOfStrings.cpp
Courses/cryptopals/: CMakeLists.txt
Courses/cryptopals/include/: base64_decode.h  base64_encode.h
Courses/cryptopals/set1/: challenge1.cpp
Dockerfiles/: Dockerfile.Debian.Latest  compose-grafana.yml
Dockerfiles/prometheus/: prometheus.yml
DunkelPilleBot/: BotV2.py  README.md  bot.py
Excercises/: CMakeLists.txt
Excercises/CLRS/: CMakeLists.txt  insertion_sort.cpp
Excercises/joergegonzalez_beginner_projects/: BaseDeriveDynamic.cpp  CMakeLists.txt  README.md  change_calculator.cpp  coin_estimator_by_weight.cpp  factors_of_my_number.cpp  hangman_game.cpp  higher_lower_guessing_game.cpp  magic_8_ball.cpp  menu_calc.cpp  palindrome.cpp  rock_paper_scissors.cpp
Excercises/joergegonzalez_beginner_projects/CountdownClock/: CountdownClock3.cpp
GoMarkdownTree/: main.go
LiGi/: Assertions.cpp  Assertions.h  CMakeLists.txt  Decls.h  EnvTools.h  FileTools.h  GeneralTools.h  HashMap.h  LRU.h  LinkedList.h  Makefile  Singleton.h  SinglyLinkedList.h  Test.cpp  Test.h  ThreadsafePrimitive.h  TimerTools.h  concepts_additions.h  creational.h  diagnosis.cpp  diagnosis.h  log.h  math.cpp  math.h  ptr_factory.h  stack.cpp  stack.h  testings.cpp  timer.cpp  timer.h  vec.h  xdg_basedirs.h
LiGi/apps/: CMakeLists.txt  README.md  timer.cpp
LiGi/apps/BasicallyEpollingHTTPServer/: CMakeLists.txt  README.md  main.cpp
LiGi/apps/BasicallyHTTP/: AbstractConnection.h  AbstractStatus.h  CMakeLists.txt  ClientServerConnections.h  ConcreteStatuses.h  Constants.h  HTTPClientResponsesBuilder.h  Responses.h  main.cpp  thingy
LiGi/apps/BasicallyHTTPServer/: AbstractContentType.h  AbstractStatus.h  CMakeLists.txt  ClientServerConnections.h  ConcreteContentTypes.h  ConcreteStatuses.h  Constants.h  HTTPClientResponsesBuilder.h  Responses.h  main.cpp  thingy
LiGi/apps/TimerApp/: ApplicationDefaults.h  CMakeLists.txt  SingleThreadLoop.h  TimerApp.cpp  Tools.h  timer.cpp
LiGi/apps/TimerApp/src/: CMakeLists.txt  SingleThreadLoop.h  TimerApp.cpp  Tools.h
LiGi/apps/lipsum_gen/: CMakeLists.txt  README.md
LiGi/apps/lipsum_gen/src/: CMakeLists.txt  lipsum.cpp  lipsum.hpp  main.cpp
LiGi/apps/ncurses_playground/: ThreadTest.cpp  main.cpp
LiGi/apps/one-time-pad/: CMakeLists.txt  one-time-pad.cpp
LiGi/test/: CMakeLists.txt  PathTools.cpp  concepts_additions.cpp  creationalTest.cpp  xdg_basedirs.cpp  xdg_basedirs.h
bootloader/loader/: Makefile  boot1.asm  boot2.asm  inline_asm.cpp  nasm_boot.asm
clox/: chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  debug.cpp  debug.h  main.cpp  memory.cpp  memory.h  scanner.cpp  scanner.h  value.cpp  value.h  vm.cpp  vm.h
gridsHTML/: index.html
joergegonzalez_beginner_projects/: BaseDeriveDynamic.cpp  CMakeLists.txt  CountdownClock.cpp  CountdownClock2.cpp  README.md  RedditAPI.cpp  base_jumper.cpp  change_calculator.cpp  coin_estimator_by_weight.cpp  dice_rolling_sim.cpp  fibonacci.cpp  hangman_game.cpp  higher_lower_guessing_game.cpp  magic_8_ball  magic_8_ball.cpp  mean_median_mode.cpp  menu_calc.cpp  palindrome.cpp  progressbar.cpp  pythagorean_triples_checker.cpp  rock_paper_scissors.cpp
joergegonzalez_beginner_projects/CountdownClock/: CountdownClock3.cpp
joergegonzalez_beginner_projects/net/: example.json  simplehttpsget.cpp  simpleparser.cpp
joergegonzalez_beginner_projects/net/jsonparser/: example.json  simpleparser.cpp  simpleparser.h
net/: simplehttpsget.cpp
net/jsonparser/: example.json  simpleparser.cpp  simpleparser.h  simpleparserv2.cpp  simpleparserv2.h
optionalPP/: README.md  main.cpp
own-c-comp/: CMakeLists.txt  configparse.cpp  main.cpp  test
rextesterAPI/: README.md  workspace.sh
rextesterAPI/src/: api.py  rextester.py
scheme/: welp.scm
snippsAndTests/: iterators.cpp
snips/: sieve_erastostehnes.py
snips/CustomReadablePassphraseGeneratorDict/: dictionary.xml
snips/Fractals/: helloworldSlowWithMouse.frag  (+1 more)
snips/bmp/: CMakeLists.txt  Headers.cpp  bmp.cpp  bmp.h  main.cpp  textbox.cpp  textbox.h
snips/bmp/bmp_qt/: imageviewer.cpp  imageviewer.pro  main.cpp
snips/bmp/include/: Headers.cpp  bmp.h  textbox.h
snips/conan_thingies/JSONTree/: CMakeLists.txt  conanfile.txt  main.cpp
snips/conan_thingies/JSONTree/Tests/: TestMarkdownLexer.cpp  main.cpp
snips/conan_thingies/JSONTree/src/: common.hpp
snips/conan_thingies/JSONTree/src/Formatters/Links/: DokuwikiLink.hpp  HTMLLink.hpp  LinkFormat.hpp  MarkdownLink.hpp  OptionalMarkdownLink.hpp
snips/conan_thingies/JSONTree/src/Formatters/List/: IndexList.hpp  MarkdownIndexList.hpp
snips/conan_thingies/JSONTree/src/Parsers/: MarkdownLexer.hpp  MarkdownLinkOptional.cpp  MarkdownLinkOptional.hpp  MarkdownScanner.hpp  StackingMarkdownLexer.cpp  StackingMarkdownLexer.hpp
snips/conan_thingies/fileHasher/: CMakeLists.txt  FileHashPrinter.hpp  README.md  ReadIntoEngine.hpp  StringFormat.hpp  common.hpp  conanfile.txt  main.cpp  source.cpp
snips/conan_thingies/fileHasher/src/: DigestEncryptApp.hpp  common.hpp
snips/conan_thingies/fileHasher/src/Print/Adapters/: FileHashOut.hpp  FileHashPrinter.hpp
snips/conan_thingies/fileHasher/src/Print/FileIO/: ReadIntoEngine.hpp
snips/conan_thingies/fileHasher/src/Print/Format/: AbstractOutputFormatter.hpp  BSDFormat.hpp  CSVFormat.hpp  PrintFormat.hpp  StringFormat.hpp
snips/conan_thingies/mathparser/: CMakeLists.txt  conanfile.txt  main.cpp
snips/conan_thingies/mathparser/src/: MathSentinels.hpp  RPNEvaluate.cpp  RPNEvaluate.hpp  ShuntingYard.cpp  ShuntingYard.hpp  Token.cpp  Token.hpp  enum_tables.hpp
snips/own-c-comp/: CMakeLists.txt
warc-parse/: CMakeLists.txt  Verifiers.h  parser.cpp  parser.h
write-own-c-compiler1/: README.md  main.c
(+63 files in other folders)
